📚 Auto-update: News data refreshed - 2025-12-30 23:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -33782,5 +33782,13 @@
         "published": "Tue, 30 Dec 2025 21:45:10 +0000",
         "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
         "summary": "<p>The demand building out AI infrastructure has placed on <a class=\"link\" href=\"https://www.engadget.com/ai/there-arent-any-black-friday-deals-on-ram-this-year-and-you-can-thank-ai-for-that-130000335.html\" target=\"_blank\">PC component makers</a> has already led to <a class=\"link\" href=\"https://www.engadget.com/computing/crucial-is-a-casualty-of-ais-hunger-for-ram-185910113.html\" target=\"_blank\">the death</a> of one consumer-facing RAM brand, but <a class=\"link\" href=\"https://www.idc.com/resourc"
+    },
+    {
+        "id": "https://blog.adafruit.com/2025/12/30/nyc-mayoral-inauguration-bans-raspberry-pi-and-flipper-zero-alongside-explosives/",
+        "title": "NYC Mayoral Inauguration bans Raspberry Pi and Flipper Zero alongside explosives",
+        "link": "https://blog.adafruit.com/2025/12/30/nyc-mayoral-inauguration-bans-raspberry-pi-and-flipper-zero-alongside-explosives/",
+        "published": "Tue, 30 Dec 2025 22:28:16 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46438828\">Comments</a>"
     }
 ]
