--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -33838,5 +33838,93 @@
         "published": "Wed, 31 Dec 2025 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "Over the last few years, New Year\u2019s eve has marked a peak for deliveries, executives at the companies and retail channels said. Restaurant chains are looking to their own apps to fill in the gaps or have reached out to logistics and other on-demand delivery companies."
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/lg-announces-new-line-of-xboom-speakers-ahead-of-ces-010052598.html?src=rss",
+        "title": "LG announces new line of xboom speakers ahead of CES",
+        "link": "https://www.engadget.com/audio/speakers/lg-announces-new-line-of-xboom-speakers-ahead-of-ces-010052598.html?src=rss",
+        "published": "Wed, 31 Dec 2025 01:00:52 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>LG just revealed several new speakers in the xboom line <a href=\"https://www.engadget.com/general/the-morning-after-engadget-newsletter-121511445.html\"><ins>ahead of CES 2026</ins></a>. These speakers are part of <a href=\"https://www.engadget.com/audio/speakers/lg-xboom-speakers-hands-on-built-with-the-help-of-william-and-a-dash-of-ai-170030904.html\"><ins>an ongoing collaboration</ins></a> with will.i.am from Black Eyed Peas, who is on board as the &quot;experimental architect&quot; involved "
+    },
+    {
+        "id": "https://foodmedcenter.org/2026-center-for-food-as-medicine-longevity-airline-water-study/",
+        "title": "Quality of drinking water varies significantly by airline",
+        "link": "https://foodmedcenter.org/2026-center-for-food-as-medicine-longevity-airline-water-study/",
+        "published": "Wed, 31 Dec 2025 00:03:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46439769\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-fire-tv-settings-to-change/",
+        "title": "I changed 10 settings on my Fire TV to instantly improve the performance",
+        "link": "https://www.zdnet.com/article/best-fire-tv-settings-to-change/",
+        "published": "Wed, 31 Dec 2025 02:00:55 GMT",
+        "source": "Latest news",
+        "summary": "If your Fire TV or Fire TV Stick is feeling sluggish, don't replace it just yet. These quick tips can give it a serious speed boost."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-brain-health-dementia-tracking-feature/",
+        "title": "Samsung's next big health advancement is a feature that alerts you to early signs of dementia",
+        "link": "https://www.zdnet.com/article/samsung-brain-health-dementia-tracking-feature/",
+        "published": "Wed, 31 Dec 2025 02:00:41 GMT",
+        "source": "Latest news",
+        "summary": "Rumors suggest that the tech giant will unveil the new health tracking feature as soon as CES next week."
+    },
+    {
+        "id": "https://www.zdnet.com/article/logitech-zone-wireless2-es-review/",
+        "title": "The most comfortable pair of headphones I've tried isn't made by Sony or Bose",
+        "link": "https://www.zdnet.com/article/logitech-zone-wireless2-es-review/",
+        "published": "Wed, 31 Dec 2025 01:00:44 GMT",
+        "source": "Latest news",
+        "summary": "Logitech's Zone Wireless 2 ES tones down the noisy office with some impressive ANC."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/tsmc-says-started-mass-production-of-most-advanced-2nm-chips/articleshow/126262323.cms",
+        "title": "TSMC says started mass production of 'most advanced' 2nm chips",
+        "link": "https://economictimes.indiatimes.com/tech/technology/tsmc-says-started-mass-production-of-most-advanced-2nm-chips/articleshow/126262323.cms",
+        "published": "Wed, 31 Dec 2025 07:46:33 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Taiwan\u2019s TSMC has begun mass production of its new 2-nanometre chips, the most advanced it has ever made. The company says the technology offers higher performance with better energy efficiency. \"TSMC's 2nm (N2) technology has started volume production in 4Q25 as planned,\" TSMC said in an undated statement on its website."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elon-musks-xai-buys-third-building-to-expand-ai-compute-power/articleshow/126262143.cms",
+        "title": "Elon Musk's xAI buys third building to expand AI compute power",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/elon-musks-xai-buys-third-building-to-expand-ai-compute-power/articleshow/126262143.cms",
+        "published": "Wed, 31 Dec 2025 07:12:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk said his AI firm xAI has bought a third building, 'MACROHARDRR',  to expand computing power for training models. The move supports plans for a huge supercomputer near Memphis that could reach nearly two gigawatts. The startup is planning to start turning the newly \u200dpurchased warehouse into a data centre in 2026."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/why-vcs-are-finally-taking-indian-nutraceuticals-seriously",
+        "title": "The $100B opportunity: Why VCs are finally taking Indian nutraceuticals seriously",
+        "link": "https://yourstory.com/2025/12/why-vcs-are-finally-taking-indian-nutraceuticals-seriously",
+        "published": "Wed, 31 Dec 2025 02:15:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "By Mr. Madhu Krishnamani, Founder and Managing Director, Botanic Healthcare\nFor the next decade, India stands on the brink of one of the most significant transformations in its wellness and healthcare landscape. Nutraceuticals, once sidelined as a niche segment within FMCG and Ayurveda, are now evo"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/indias-semiconductor-push-chip",
+        "title": "India\u2019s semiconductor push; AI adoption on the rise",
+        "link": "https://yourstory.com/2025/12/indias-semiconductor-push-chip",
+        "published": "Wed, 31 Dec 2025 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The next two years will be inflection points for India\u2019s semiconductor manufacturing journey from front-end chip production to back-end chip packaging."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/outlook-2026-india-semiconductor-push-buyers-supply-chains",
+        "title": "Outlook 2026: India\u2019s semiconductor push clears capacity hurdle; next phase must ensure buyers and supply chains",
+        "link": "https://yourstory.com/2025/12/outlook-2026-india-semiconductor-push-buyers-supply-chains",
+        "published": "Wed, 31 Dec 2025 01:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Ensuring chip facilities have local supply chains and customers will decide whether India\u2019s chip ambition becomes a costly experiment or puts the country on the global map."
+    },
+    {
+        "id": "https://inc42.com/features/will-investors-open-their-wallets-again-in-2026/",
+        "title": "Will Investors Open Their Wallets Again In 2026?",
+        "link": "https://inc42.com/features/will-investors-open-their-wallets-again-in-2026/",
+        "published": "Wed, 31 Dec 2025 01:30:04 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Will Investors Open Their Wallets Again In 2026?\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-100-4-5.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />By the end of 2025, India\u2019s tech startup ecosystem was operating in a far tighter capital environment. Total funding closed&#8230;"
     }
 ]
